--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <!-- error and spinner div -->
         <div>
-            <h2 id="error-message" class="bg-primary my-5 text-center text-warning">Insert a valid name</h2>
+            <h2 id="error-message" class="bg-primary my-5 text-center text-warning">Insert valid book name!</h2>
             <div id="spinner" class="spinner-grow" style="margin-left: 50%;" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
